--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "theme-github-light",
-    "displayName": "GitHub Light Theme",
+    "name": "theme-github-bold",
+    "displayName": "GitHub Bold Theme",
     "description": "Identical GitHub editor theme",
     "version": "0.0.1",
     "publisher": "gustavo",
